--- a/resources/templates/timecard.html
+++ b/resources/templates/timecard.html
@@ -131,7 +131,7 @@
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
-					
+
 							<li>
 								<a href="/employeeReport">
 									<i class="mdi mdi-account-heart"></i>
@@ -141,7 +141,7 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
+									<i class="layui-icon layui-icon-auz"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
@@ -243,7 +243,7 @@
 								<div class="card">
 									<div class="card-body">
 										<h4 class="header-title">
-											<查看当前工时卡> ID：${out.card_id}
+											<查看当前工时卡>
 										</h4>
 										<!-- <p class="text-muted font-13 mb-4">
 										<form action="SearchExpenseServlet" method="post">
@@ -406,7 +406,8 @@
 											<span>工作时长</span>
 										</th>
 										<td align="center">
-											<input type="number" name="hours" id="cost" class="layui-input" max="24" min="1">
+											<input type="number" name="hours" id="cost" class="layui-input" max="24"
+												min="1">
 										</td>
 									</tr>
 									<tr>
