--- a/resources/templates/get_bank_account.html
+++ b/resources/templates/get_bank_account.html
@@ -20,23 +20,23 @@
 			// 	}
 			// }
 			//
-				function updatePay() {
-					var xml = new XMLHttpRequest();
-					xml.open("get", "/updatePickupPay", true);
-					xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-					xml.send();
-					xml.onreadystatechange = function() {
-						if (xml.readyState == 4) {
-							alert("【修改成功】");
-							location.href = "/resources/templates/main.html";
-						}
+			function updatePay() {
+				var xml = new XMLHttpRequest();
+				xml.open("get", "/updatePickupPay", true);
+				xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				xml.send();
+				xml.onreadystatechange = function() {
+					if (xml.readyState == 4) {
+						alert("【修改成功】");
+						location.href = "/resources/templates/main.html";
 					}
 				}
+			}
 
-				function redirect() {
-					alert("【修改成功】");
-					location.href = "/resources/templates/main.html";
-				}
+			function redirect() {
+				alert("【修改成功】");
+				location.href = "/resources/templates/main.html";
+			}
 		</script>
 		<!-- App css -->
 		<link rel="stylesheet" href="../layui/css/layui.css">
@@ -68,11 +68,8 @@
 
 					<!--- Sidemenu -->
 					<div id="sidebar-menu">
-
 						<ul class="metismenu" id="side-menu">
-
 							<li class="menu-title">基础功能</li>
-
 							<li>
 								<a href="/resources/templates/main.html">
 									<i class="fe-airplay"></i>
@@ -87,10 +84,10 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="add_order.html" onclick="return canuse()">新建订单</a>
+										<a href="/showOrder" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="order_info.html" onclick="return canuse()">修改订单</a>
+										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
@@ -116,7 +113,7 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
+									<i class="layui-icon layui-icon-auz"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
@@ -236,7 +233,8 @@
 														<span>开户银行</span>
 													</th>
 													<td align="center">
-														<input type="text" name="bankName" id="bank_name" class="layui-input">
+														<input type="text" name="bankName" id="bank_name"
+															class="layui-input">
 													</td>
 												</tr>
 												<tr>
@@ -244,21 +242,25 @@
 														<span>账户名称</span>
 													</th>
 													<td align="center">
-														<input type="text" name="bankAccount" id="account" class="layui-input">
+														<input type="text" name="bankAccount" id="account"
+															class="layui-input">
 													</td>
 												</tr>
 												<tr>
 													<td colspan="2">
-														<input type="submit" value="确认" id="makeadd" class="btn btn-success"
-															onclick="redirect()">
-														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+														<input type="submit" value="确认" id="makeadd"
+															class="btn btn-success" onclick="redirect()">
+														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+														&nbsp;&nbsp;&nbsp;
 														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+														&nbsp;&nbsp;&nbsp;
 														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+														&nbsp;&nbsp;&nbsp;
 														&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-														<input type="button" value="取消" id="disadd" class="btn btn-danger"
-															onclick="back()">
+														<input type="button" value="取消" id="disadd"
+															class="btn btn-danger" onclick="back()">
 													</td>
 												</tr>
 											</table>
