--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -1,107 +1,72 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Payroll System</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      content="A fully featured admin theme which can be used to build CRM, CMS, etc."
-      name="description"
-    />
-    <meta content="Coderthemes" name="author" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- App favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
 
-    <!-- App css -->
-    <link
-      href="/resources/css/bootstrap.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="/resources/css/icons.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript"></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>Payroll System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+  <meta content="Coderthemes" name="author" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- App favicon -->
+  <link rel="shortcut icon" href="assets/images/favicon.ico" />
 
-  <body class="authentication-bg">
-    <div class="account-pages mt-5 mb-5">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-5">
-            <div class="card">
-              <div class="card-body p-4">
-                <div class="text-center w-75 m-auto">
-                  <a href="index.html">
-                    <span
-                      ><img
-                        src="/resources/assets/images/logo.png"
-                        alt=""
-                        height="22"
-                    /></span>
-                  </a>
-                  <p class="text-muted mb-4 mt-3"></p>
+  <!-- App css -->
+  <link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+  <link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
+  <script type="text/javascript"></script>
+</head>
+
+<body class="authentication-bg">
+  <div class="account-pages mt-5 mb-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5">
+          <div class="card">
+            <div class="card-body p-4">
+              <div class="text-center w-75 m-auto">
+                <a href="index.html">
+                  <span><img src="/resources/assets/images/logo.png" alt="" height="50" /></span>
+                </a>
+                <p class="text-muted mb-4 mt-3"></p>
+              </div>
+
+              <form action="/loginForm" method="get">
+                <div class="form-group mb-3">
+                  <label for="emailaddress">用户名</label>
+                  <input class="form-control" type="text" name="user" required="" placeholder="手机号" id="phonenumber" />
                 </div>
 
-                <form action="/loginForm" method="get">
-                  <div class="form-group mb-3">
-                    <label for="emailaddress">用户名</label>
-                    <input
-                      class="form-control"
-                      type="text"
-                      name="user"
-                      required=""
-                      placeholder="手机号"
-                      id="phonenumber"
-                    />
-                  </div>
+                <div class="form-group mb-3">
+                  <a href="pages-recoverpw.html" class="text-muted float-right"><small></small></a>
+                  <label for="password">密码</label>
+                  <input class="form-control" type="password" required="" name="password" placeholder="密码"
+                    id="password" />
+                </div>
 
-                  <div class="form-group mb-3">
-                    <a
-                      href="pages-recoverpw.html"
-                      class="text-muted float-right"
-                      ><small></small
-                    ></a>
-                    <label for="password">密码</label>
-                    <input
-                      class="form-control"
-                      type="password"
-                      required=""
-                      name="password"
-                      placeholder="密码"
-                      id="password"
-                    />
-                  </div>
-
-                  <div class="form-group mb-0 text-center">
-                    <input
-                      type="submit"
-                      value="登录"
-                      class="btn btn-primary btn-block"
-                    />
-                  </div>
-                </form>
-              </div>
-              <!-- end card-body -->
+                <div class="form-group mb-0 text-center">
+                  <input type="submit" value="登录" class="btn btn-primary btn-block" />
+                </div>
+              </form>
             </div>
-            <!-- end card -->
-
-            <!-- end row -->
+            <!-- end card-body -->
           </div>
-          <!-- end col -->
-        </div>
-        <!-- end row -->
-      </div>
-      <!-- end container -->
-    </div>
-    <!-- end page -->
+          <!-- end card -->
 
-    <!-- App js -->
-    <script src="/resources/js/vendor.min.js"></script>
-    <script src="/resources/js/app.min.js"></script>
-  </body>
+          <!-- end row -->
+        </div>
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end container -->
+  </div>
+  <!-- end page -->
+
+  <!-- App js -->
+  <script src="/resources/js/vendor.min.js"></script>
+  <script src="/resources/js/app.min.js"></script>
+</body>
+
 </html>
