fix update empoyee bugs

--- a/resources/templates/get_bank_account.html
+++ b/resources/templates/get_bank_account.html
@@ -122,7 +122,7 @@
 										<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
+										<a href="/resources/templates/admin_report.html" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
