fix the presentation bug of mainpage

--- a/resources/templates/error_page.html
+++ b/resources/templates/error_page.html
@@ -59,7 +59,7 @@
 						<li class="menu-title">基础功能</li>
 
 						<li>
-							<a href="/resources/templates/main.html">
+							<a href="/profile">
 								<i class="fe-airplay"></i>
 								<span> 个人主页 </span>
 							</a>
@@ -101,16 +101,16 @@
 						<li class="menu-title">高级功能</li>
 						<li>
 							<a href="javascript: void(0);">
-								<i class="layui-icon layui-icon-auz"></i>
+								<i class="fe-anchor"></i>
 								<span> 管理功能 </span>
 								<span class="menu-arrow"></span>
 							</a>
 							<ul class="nav-second-level" aria-expanded="false">
 								<li>
-									<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+									<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 								</li>
 								<li>
-									<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+									<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
 								</li>
 							</ul>
 						</li>
