--- a/resources/templates/get_address.html
+++ b/resources/templates/get_address.html
@@ -72,7 +72,7 @@
 						<ul class="metismenu" id="side-menu">
 							<li class="menu-title">基础功能</li>
 							<li>
-								<a href="/resources/templates/main.html">
+								<a href="/profile">
 									<i class="fe-airplay"></i>
 									<span> 个人主页 </span>
 								</a>
@@ -114,7 +114,7 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="layui-icon layui-icon-auz"></i>
+									<i class="fe-anchor"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
