--- a/resources/templates/admin_report.html
+++ b/resources/templates/admin_report.html
@@ -92,7 +92,7 @@
 					<ul class="metismenu" id="side-menu">
 						<li class="menu-title">基础功能</li>
 						<li>
-							<a href="/resources/templates/main.html">
+							<a href="/profile">
 								<i class="fe-airplay"></i>
 								<span> 个人主页 </span>
 							</a>
