change the present path of mainpage

--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -8,7 +8,7 @@
 		<meta content="Coderthemes" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!-- App favicon -->
-		<link rel="shortcut icon" href="../assets/images/favicon.ico">
+		<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
 		<script type="text/javascript">
 			// function canuse(){
 			// 	var phonenumber = <%=(String)session.getAttribute("user") %>
@@ -22,9 +22,9 @@
 			//
 		</script>
 		<!-- App css -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/icons.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/app.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
 		<style type="text/css">
 			.card-body>ul {
 				list-style: none;
@@ -53,10 +53,10 @@
 					<!-- LOGO -->
 					<a href="#" class="logo text-center mb-4">
 						<span class="logo-lg">
-							<img src="../assets/images/logo.png" alt="" height="50">
+							<img src="/resources/assets/images/logo.png" alt="" height="50">
 						</span>
 						<span class="logo-sm">
-							<img src="../assets/images/logo-sm.png" alt="" height="24">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
 						</span>
 					</a>
 
@@ -144,7 +144,7 @@
 							<li class="dropdown notification-list">
 								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
 									role="button" aria-haspopup="false" aria-expanded="false">
-									<img src="../assets/images/users/avatar-1.jpg" alt="user-image"
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
 										class="rounded-circle">
 									<small class="pro-user-name ml-1">
 										{{.showUsername}}
@@ -192,7 +192,7 @@
 						<div class="app-search">
 							<form>
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="No Search..." disabled>
+									<input type="text" class="form-control" placeholder="No Search/resources." disabled>
 									<div class="input-group-append">
 
 									</div>
@@ -224,12 +224,12 @@
 								<!-- <div class="card"> -->
 								<div class="card-body" id="banner">
 									<ul>
-										<li><img src="../assets/images/banner2.jpg" /></li>
-										<li><img src="../assets/images/banner3.jpg" /></li>
-										<li><img src="../assets/images/banner4.jpg" /></li>
-										<li><img src="../assets/images/banner1.jpg" /></li>
-										<li><img src="../assets/images/banner5.jpg" /></li>
-										<li><img src="../assets/images/banner6.jpg" /></li>
+										<li><img src="/resources/assets/images/banner2.jpg" /></li>
+										<li><img src="/resources/assets/images/banner3.jpg" /></li>
+										<li><img src="/resources/assets/images/banner4.jpg" /></li>
+										<li><img src="/resources/assets/images/banner1.jpg" /></li>
+										<li><img src="/resources/assets/images/banner5.jpg" /></li>
+										<li><img src="/resources/assets/images/banner6.jpg" /></li>
 									</ul>
 								</div>
 							</div>
@@ -321,15 +321,15 @@
 
 
 			<!-- App js -->
-			<script src="../js/vendor.min.js"></script>
-			<script src="../js/app.min.js"></script>
+			<script src="/resources/js/vendor.min.js"></script>
+			<script src="/resources/js/app.min.js"></script>
 
 			<!-- Plugins js -->
-			<script src="../js/vendor/Chart.bundle.js"></script>
-			<script src="../js/vendor/jquery.sparkline.min.js"></script>
-			<script src="../js/vendor/jquery.knob.min.js"></script>
+			<script src="/resources/js/vendor/Chart.bundle.js"></script>
+			<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
+			<script src="/resources/js/vendor/jquery.knob.min.js"></script>
 
-			<script src="../js/pages/dashboard.init.js"></script>
+			<script src="/resources/js/pages/dashboard.init.js"></script>
 			<!-- record map -->
 
 	</body>
