--- a/resources/templates/change_method.html
+++ b/resources/templates/change_method.html
@@ -32,6 +32,11 @@
 					}
 				}
 			}
+
+			function pay() {
+				alert("操作成功！！这一周工作辛苦了～～");
+				location.href = "/runPayroll"
+			}
 		</script>
 		<!-- App css -->
 		<link rel="stylesheet" href="/resources/layui/css/layui.css">
@@ -119,6 +124,10 @@
 									<li>
 										<a href="/disReport" onclick="return canuse()">管理员工报告</a>
 									</li>
+
+                  <li>
+                    <a href="#" onclick="pay()">工资结算发放</a>
+                  </li>
 								</ul>
 							</li>
 						</ul>
