--- a/resources/templates/employee_info.html
+++ b/resources/templates/employee_info.html
@@ -31,6 +31,12 @@
 				});
 			});
 
+
+			function pay() {
+				alert("操作成功！！这一周工作辛苦了～～");
+				location.href = "/runPayroll"
+			}
+
 			function deletes(root) {
 				var flag = confirm("【确认删除？】");
 				if (flag) {
@@ -109,6 +115,10 @@
 									<li>
 										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
 									</li>
+
+                  <li>
+                    <a href="#" onclick="pay()">工资结算发放</a>
+                  </li>
 								</ul>
 							</li>
 							<li>
