--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -19,7 +19,10 @@
 			// 		return false;
 			// 	}
 			// }
-			//
+			function pay() {
+				alert("操作成功！！这一周工作辛苦了～～");
+				location.href = "/runPayroll"
+			}
 		</script>
 		<!-- App css -->
 		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -118,6 +121,11 @@
 									<li>
 										<a href="/disReport" onclick="return canuse()">管理员工报告</a>
 									</li>
+									<li>
+										<a href="#" onclick="pay()">工资结算发放</a>
+									</li>
+
+									
 								</ul>
 							</li>
 						</ul>
