--- a/resources/templates/order_info.html
+++ b/resources/templates/order_info.html
@@ -32,6 +32,12 @@
 				});
 			});
 
+
+			function pay() {
+				alert("操作成功！！这一周工作辛苦了～～");
+				location.href = "/runPayroll"
+			}
+
 			function deletes(root) {
 				var flag = confirm("【确认删除？】");
 				if (flag) {
@@ -147,6 +153,10 @@
 									<li>
 										<a href="/disReport" onclick="return canuse()">管理员工报告</a>
 									</li>
+
+                  <li>
+                    <a href="#" onclick="pay()">工资结算发放</a>
+                  </li>
 								</ul>
 							</li>
 						</ul>
