--- a/resources/templates/update_profile.html
+++ b/resources/templates/update_profile.html
@@ -24,6 +24,11 @@
         });
       });
 
+      function pay() {
+        alert("操作成功！！这一周工作辛苦了～～");
+        location.href = "/runPayroll";
+      }
+
       function back() {
         window.history.go(-1);
       }
@@ -155,6 +160,10 @@
                     <a href="/employeeReport" onclick="return canuse()"
                       >管理员工报告</a
                     >
+                  </li>
+
+                  <li>
+                    <a href="#" onclick="pay()">工资结算发放</a>
                   </li>
                 </ul>
               </li>
